# mlem

./: .gitignore  .project  Cargo.toml  README.md
src/: .machine.rs.swp  .test_machine.rs.swp  instructions.rs  lib.rs  machine.rs  test_instructions.rs  test_machine.rs  types.rs
src/virtual_machine/: mod.rs  test_machine.rs
