[package]
name = "mlem"
version = "0.1.0"
authors = ["SilverWingedSeraph <lfstindall@gmail.com>"]
description = "A 64-bit Harvard The Machine Learning Machine is a 64-bit virtual Harvard-arch machine for evolutionary algorithms to program against. The machine has eight GPRs (`R0` through `R7`), a hardware stack with SP and BP, and hardware I/O with Input and Output. "
keywords = ["machine", "virtual-machine", "learning", "genetic"]

repository = "https://github.com/SilverWingedSeraph/mlem"
documentation = "https://docs.rs/mlem"
readme = "README.md"
categories = ["emulators", "science"]
license = "MIT"

[dependencies]
byteorder = "^1"
serde = "^0.9"
serde_derive = "^0.9"
serde_cbor = "^0.5"
