[package]
name = "mlem"
edition = "2018"
version = "0.2.0"
authors = ["Leonora Tindall <nora@nora.codes>"]
description = "A 64-bit Harvard The Machine Learning Machine is a 64-bit virtual Harvard-arch machine for evolutionary algorithms to program against. The machine has eight GPRs, a hardware stacl, and built-in I/O."
keywords = ["machine", "virtual-machine", "learning", "genetic"]

repository = "https://github.com/NoraCodes/mlem"
documentation = "https://docs.rs/mlem"
readme = "README.md"
categories = ["emulators", "science"]
license = "AGPL-3.0-only"

[features]
default = ["serialize"]
serialize = ["serde", "serde_derive"]

[dependencies]
byteorder = "1"
serde = { version = "1", optional = true }
serde_derive = { version = "1", optional = true }
